fixing paragraph white space

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,10 @@ h1 {
 p {
     line-height: 28px;
     margin-bottom: 25px;
+    font-size: 18px;
+}
+
+.project-details-p {
     font-size: 21px;
 	white-space:pre;
 }
